src/app/private/features/chat/chat.component.scss
@import '~style/common';

:host {
  display: block;
  overflow: hidden;
  height: 100%;
}

.page-content {
  height: 100%;
}

#left-panel {
  position: relative;
  float: left;
  background-color: $white;
  width: $left-panel-width;
  border-right: 1px solid $blue-grey-4;
  height: 100%;
  @include media-breakpoint-down(md) {
    width: 100%;
    &.active-conversation {
      display: none;
    }
  }
}

#center-panel {
  height: 100%;
  margin-left: $left-panel-width;
  background-color: $white;
  position: relative;

  tsl-current-conversation {
    height: 100%;
  }

  @include media-breakpoint-down(md) {
    display: none;
    margin-left: 0;
    width: 100%;
    &.active-conversation {
      display: block;
      height: calc(100% + #{$tabbar-height});
      z-index: 21;
    }
  }
}

